[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/SkillPointsPage/AlternateGeneralKnowledgeContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://THEME.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/SkillPointsPage/DistributeSkillPointsStep.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Gruppo-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI_Elements/originDescriptionBox.png" type="Texture" id=8]
[ext_resource path="res://UI_Elements/Attributes/Randomized/roll_results.png" type="Texture" id=17]
[ext_resource path="res://UI_Elements/Attributes/Randomized/roll_panel.png" type="Texture" id=18]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonHover.tres" type="StyleBox" id=19]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonDisabled.tres" type="StyleBox" id=21]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonDisabled.tres" type="StyleBox" id=22]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonNormal.tres" type="StyleBox" id=23]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonPressed.tres" type="StyleBox" id=24]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonHover.tres" type="StyleBox" id=25]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonNormal.tres" type="StyleBox" id=26]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonPressed.tres" type="StyleBox" id=27]

[sub_resource type="DynamicFont" id=13]
size = 48
outline_size = 5
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=21]
size = 36
outline_size = 5
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 26
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=15]
size = 36
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=16]
size = 48
outline_size = 4
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=17]
size = 48
outline_size = 4
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=20]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=18]

[node name="DistributeSkillPointsStep" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.918519
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SkillContainerBackground" type="TextureRect" parent="."]
anchor_left = 0.0409574
anchor_top = 0.0262097
anchor_right = 1.00585
anchor_bottom = 0.729838
margin_right = -13.9999
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CurrentAttributeLabel" type="Label" parent="SkillContainerBackground"]
unique_name_in_owner = true
anchor_left = 0.0933333
anchor_top = 0.136103
anchor_right = 0.455
anchor_bottom = 0.239255
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 13 )
text = "ATTRIBUTE BASED SKILLS"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ChosenSpecLabel" type="Label" parent="SkillContainerBackground"]
unique_name_in_owner = true
anchor_left = 0.543894
anchor_top = 0.151863
anchor_right = 0.905583
anchor_bottom = 0.22063
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 21 )
text = "Chosen spec: RANGER"
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SkillPackGrid" type="GridContainer" parent="SkillContainerBackground"]
unique_name_in_owner = true
anchor_left = 0.0897425
anchor_top = 0.234957
anchor_right = 0.606442
anchor_bottom = 0.52149
margin_bottom = 3.05176e-05
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AlternativeGeneralKnowledge" parent="SkillContainerBackground" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.630917
anchor_top = 0.233524
anchor_right = 0.886547
anchor_bottom = 0.861032
margin_right = 0.0
margin_bottom = 0.0

[node name="CurrentSpecializationBackground" type="TextureRect" parent="."]
anchor_left = 0.0847518
anchor_top = 0.72883
anchor_right = 0.430497
anchor_bottom = 0.849798
margin_left = 1.99997
margin_top = -3.00012
margin_right = 2.0
margin_bottom = -3.00012
texture = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="CurrentSpecializationBackground"]
anchor_left = 0.0538462
anchor_top = 0.2
anchor_right = 0.935385
anchor_bottom = 0.708333
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 14 )
text = "POINTS FOR SPECIALIZATION SKILLS"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CurrentAllSkillsBackground" type="TextureRect" parent="."]
anchor_left = 0.0863476
anchor_top = 0.866935
anchor_right = 0.432093
anchor_bottom = 0.9879
margin_left = -1.00015
margin_top = -0.000366211
margin_right = -1.00012
margin_bottom = 0.00231934
texture = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="CurrentAllSkillsBackground"]
anchor_left = 0.0569231
anchor_top = 0.208333
anchor_right = 0.938462
anchor_bottom = 0.716667
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 15 )
text = "POINTS FOR ALL SKILLS"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CurrentSpecializationsAmountBackground" type="TextureRect" parent="."]
anchor_left = 0.440426
anchor_top = 0.726814
anchor_right = 0.504255
anchor_bottom = 0.847782
margin_left = 1.99878
margin_top = -1.00024
margin_right = 2.00031
margin_bottom = -1.00061
texture = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CurrentSpecializationAmount" type="Label" parent="CurrentSpecializationsAmountBackground"]
unique_name_in_owner = true
anchor_left = 0.108333
anchor_top = 0.125
anchor_right = 0.866667
anchor_bottom = 0.833333
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 16 )
text = "0"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CurrentAllAmountBackground" type="TextureRect" parent="."]
anchor_left = 0.437234
anchor_top = 0.860887
anchor_right = 0.501064
anchor_bottom = 0.98185
margin_left = 7.99976
margin_top = 5.99927
margin_right = 7.99939
margin_bottom = 6.00391
texture = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CurrentAllAmount" type="Label" parent="CurrentAllAmountBackground"]
unique_name_in_owner = true
anchor_left = 0.15
anchor_top = 0.158333
anchor_right = 0.85
anchor_bottom = 0.825
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 17 )
text = "0"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SkillScreenDescription" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.575521
anchor_top = 0.713709
anchor_right = 0.946354
anchor_bottom = 1.00504
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DescriptionName" type="Label" parent="SkillScreenDescription"]
unique_name_in_owner = true
anchor_left = 0.101865
anchor_top = 0.113206
anchor_right = 0.908177
anchor_bottom = 0.290565
margin_left = -2.52782
margin_top = -2.7166
margin_right = -6.62146
margin_bottom = 1.02654
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 17 )
text = "Hover over skill"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DescriptionText" type="RichTextLabel" parent="SkillScreenDescription"]
unique_name_in_owner = true
anchor_left = 0.0860831
anchor_top = 0.309434
anchor_right = 0.901003
anchor_bottom = 0.864151
margin_left = 8.70889
margin_top = 0.573387
margin_right = -11.5136
margin_bottom = -4.74017
custom_colors/default_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/normal_font = SubResource( 20 )
bbcode_enabled = true
bbcode_text = "To show the descriptions


Database will go brrrrrr."
text = "To show the descriptions


Database will go brrrrrr."
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Previous" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.0265957
anchor_top = 0.302419
anchor_right = 0.0797872
anchor_bottom = 0.403226
custom_styles/hover = ExtResource( 25 )
custom_styles/pressed = ExtResource( 27 )
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = ExtResource( 21 )
custom_styles/normal = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Next" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.950354
anchor_top = 0.302419
anchor_right = 1.00355
anchor_bottom = 0.403226
custom_styles/hover = ExtResource( 19 )
custom_styles/pressed = ExtResource( 24 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = ExtResource( 22 )
custom_styles/normal = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="mouse_entered_skill_name_of_skill_pack" from="SkillContainerBackground/AlternativeGeneralKnowledge" to="." method="_on_SkillPackContainer_mouse_entered_skill_name"]
[connection signal="sell_pack_button_pressed" from="SkillContainerBackground/AlternativeGeneralKnowledge" to="." method="on_sell_pack_button_pressed"]
[connection signal="skill_pack_skill_minus_pressed" from="SkillContainerBackground/AlternativeGeneralKnowledge" to="." method="on_skill_pack_skill_minus_pressed"]
[connection signal="skill_pack_skill_plus_pressed" from="SkillContainerBackground/AlternativeGeneralKnowledge" to="." method="on_skill_pack_skill_plus_pressed"]
[connection signal="pressed" from="Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
